# red-flag

./: Dockerfile  README.md  execute_setup.py  inference.py  openenv.yaml  pyproject.toml  run_setup.bat  setup_project.py
env/: models.py
financial-audit-openenv/: .env.example  README.md  inference.py  requirements.txt
financial-audit-openenv/api/: server.py
financial-audit-openenv/env/: environment.py  graders.py  ledger.py  reward.py
server/: app.py
